codama-macros/tests/codama_attribute/type_directive/unrecognized_type.fail.rs
use codama::codama;

#[codama(type = unrecognized_type(foo = 42))]
pub struct Test;

fn main() {}
